--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Keeper App</title>
+    <link
+    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+    rel="stylesheet"
+    />
+  <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script src="./src/index.js" type="text/jsx"></script>
+    <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
+
