--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Keeper App</title>
-    <link
+    <title>Keeper</title>
+    <link font-family: "Montserrat", sans-serif;
     href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet"
-    />
+    rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
